log/build_2024-11-20_21-03-05/locomotion/stderr.log
  File "/home/robot/human_ws/install/locomotion/lib/python3.10/site-packages/locomotion/locomotion.py", line 117
    if msg.coordinates[index].x >=0
                                   ^
SyntaxError: expected ':'

